--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <nav>
 
-            <button class="BtnTema">Tema</button>
+            <button onclick="temabtn()" class="BtnTema">Tema</button>
             <h4 id="Home" class="itemNav">
                 <a href="https://dja990github.github.io/Xypo_Jobs_Home/" target="_blank">
                      Home
