--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <p id="lineT1">
             <h2>Página inicial</h2>
-            <img id="imgFOTO" src="./imagens/logo mclaren.jpg">
+            <img id="imgFOTO" src="./imagens/logo mclaren.jpg" onclick="window.location.href = 'http://login.gru.ifsp.edu.br/'">
             <br>
     </p>
 
