--- a/Games/games.html
+++ b/Games/games.html
@@ -9,11 +9,13 @@
 </head>
 <body>
     <ul>
-            <li>https://dinorunner.com/pt/<\li>
+            <li>
+                Dinorunner off
+            </li>
+                <a href="https://dinorunner.com/pt/" target="_blank">https://dinorunner.com/pt/</a>
             <li>
                 F1 Super Stor Car
             </li>
-             
                  <a href="https://poki.com/br/g/super-star-car" target="_blank">https://poki.com/br/g/super-star-car</a>
             <li>
                  Euro-truck
