--- a/Fontes/Política_de_privacidade.html
+++ b/Fontes/Política_de_privacidade.html
@@ -52,7 +52,9 @@ em servidores seguros e protegidas por medidas de segurança adequadas.
 textos, imagens, vídeos e códigos HTML, é de propriedade exclusiva da
  Xypo Jobs e está protegido por leis de direitos autorais.<br><br>
 
-4.2. É estritamente proibida a reprodução, distribuição ou modificação do conteúdo do site da Xypo Jobs sem autorização prévia por escrito da empresa.
+4.2. É estritamente proibida a reprodução, distribuição ou modificação 
+do conteúdo do site da Xypo Jobs sem autorização prévia por 
+escrito da empresa.<br><br>
 
 <b>5. Propriedade Intelectual:</b>
 
