--- a/Games/games.html
+++ b/Games/games.html
@@ -10,6 +10,10 @@
 <body>
     <ul>
             <li>
+                Eagle Ride
+            </li>
+                <a href="https://poki.com/br/g/eagle-ride">https://poki.com/br/g/eagle-ride</a>a>
+            <li>
                 Dinorunner off
             </li>
                 <a href="https://dinorunner.com/pt/" target="_blank">https://dinorunner.com/pt/</a>
@@ -51,3 +55,4 @@
     </main>
 </body>
 </html>
+
